--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,132 @@
-body {
+* {
+  font-family: 'Arial', sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+.App {
   background-image: url('/a-bunch-of-light-bulbs-hanging-from-a-string-of-lights.jpg');
-  object-fit: scale-down;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 0.5rem;
+  height: 100vh;
 }
 
 form {
   border: 0.1rem solid #ccc;
   border-radius: 0.5rem;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
   width: 30%;
-  transition: all 0.3s ease-in-out;
   padding: 1rem;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  position: absolute;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.8);
-  background-color: #00000081;
+  background-color: #000000aa;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  label {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    border: 0.1rem solid #ccc;
+    padding: 0.5rem;
+  }
+
+  .form-row {
+    display: flex;
+    justify-content: center;
+
+    input {
+      text-align: center;
+      padding: 0.5rem 0;
+      width: 100%;
+      margin-bottom: 0.5rem;
+      border: 0.1rem solid #ccc;
+      border-radius: 0.25rem;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #007bff;
+    }
+  }
+
+  button {
+    font-size: medium;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 0.5rem;
+    border: none;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+  }
+
+  button:hover {
+    cursor: pointer;
+    background-color: #0056b3;
+    transition: all 0.3s ease-in-out;
+  }
+
+  h2 {
+    text-align: center;
+    color: #fff;
+    width: auto;
+    padding: 0.3rem 0.5rem;
+    border: 1px solid #ccc;
+    margin-bottom: 0.5rem;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      color: #fff;
+      padding: 0.3rem 0.5rem;
+      margin-bottom: 0.5rem;
+      border: 1px solid #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      label {
+        margin: 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        input {
+          margin-right: 1rem;
+          height: 1rem;
+          width: 1rem;
+        }
+      }
+
+      button {
+        width: 25%;
+        margin: 0;
+      }
+    }
+  }
 }
 
-@media screen and (max-width: 800px) {
+/* @media screen and (max-width: 800px) {
   form {
     width: 40%;
     transition: all 0.3s ease-in-out;
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   form {
     width: 50%;
     transition: all 0.3s ease-in-out;
   }
-}
+} */
